feat(report): 유형 리포트 품질 및 리라이트 로직 개선 (#119)
* refactor(ai): 유형 리포트 작성 LLM 메인 모델 변경

GPT -> GEMINI

* feat(report): 유형 리포트 길이 미준수 시 부분 리라이트로 보정

* refactor: 유형 리포트의 일부 ErrorCode의 message 수정

"타입" -> "유형"